# amul-protien-products

./: .gitignore  README.md  amul_request.py  config.py  main.py  products.json  pyproject.toml  requirements.txt
.github/workflows/: notifier.yml
notifications/: ios.py  notifications.py
src/: amul_request.py  config.py  main.py
src/notifications/: __init__.py  ios.py  ntfysh.py
src/utils/: logger.py  notification.py
utils/: notification.py
